# MUSIC_BOT_BACKEND

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  test_redis.py
alembic/: env.py
alembic/versions/: 4ebd4bb66987_.py
app/: app.py  database.py  main.py
app/alembic/: env.py
app/alembic/versions/: 8e529f94fa08_add_image_field_to_track_model.py  a3d0f5d02aa4_add_video_table_and_video_url_field_to_.py  ad2b2d31ef81_recreate_missing_revision.py  b758c2c8eae6_your_message_here.py
app/core/: config.py  logger.py
app/models/: track.py  video.py
app/routers/: main.py  track.py  video.py
app/schemas/: schemas.py  track.py  video.py
app/services/: files.py
bot/: bot.py  index.html
