[project]
name = "music-bot-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "click==8.1.8",
    "fastapi==0.115.8",
    "h11==0.14.0",
    "idna==3.10",
    "pydantic-core==2.27.2",
    "pydantic==2.10.6",
    "sniffio==1.3.1",
    "starlette==0.45.3",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0",
    "alembic>=1.14.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "asyncpg>=0.30.0",
    "scalar-fastapi>=1.0.3",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.38",
    "boto3>=1.36.25",
    "greenlet>=3.1.1",
]
